[project]
name = "recorder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "numpy>=2.3.2",
    "sounddevice>=0.5.2",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "nuitka>=2.7.12",
]

[project.scripts]
audio-recorder = "main:main"

[tool.uv]
dev-dependencies = [
    "nuitka>=2.7.12",
]
